--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -4,14 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.android.eindopdracht.ProjectsActivity">
+    tools:context="com.android.eindopdracht.DisplayActivity">
 
-    <!--<TextView android:text="Hello Projects page" android:layout_width="wrap_content"
+    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />-->
 
-    <fragment android:name="com.android.eindopdracht.ListFragment"
-        android:id="@+id/list_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/listview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
