--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,27 +5,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="BigHours Home" android:layout_width="wrap_content"
+    <TextView android:text="Zoek naar restaurants" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
-    <Button
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Projects"
-        android:id="@+id/button_projects"
-        android:onClick="showProjects"
+        android:id="@+id/editText"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="121dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="About"
-        android:id="@+id/button_about"
-        android:onClick="showAbout"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:text="Zoek"
+        android:id="@+id/button_search"
+        android:onClick="search"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
