--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
-    android:name=".MainActivity"
-    android:label="BigHours">
+    android:name=".MainActivity">
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
