detail pagina wordt gevuld vanuit api

--- a/app/src/main/res/layout-land/activity_display.xml
+++ b/app/src/main/res/layout-land/activity_display.xml
@@ -14,5 +14,13 @@
         class="com.android.eindopdracht.ListFragment"
         tools:layout="@layout/fragment_list">
     </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:layout_width="0dp"
+        android:layout_weight="1.62"
+        android:layout_height="match_parent"
+        class="com.android.eindopdracht.DetailFragment"
+        tools:layout="@layout/fragment_detail">
+    </fragment>
 
 </LinearLayout> 
