--- a/app/src/main/res/menu/menu_display.xml
+++ b/app/src/main/res/menu/menu_display.xml
@@ -3,5 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.eindopdracht.DisplayActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100" app:showAsAction="ifRoom" />
 </menu>
