--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textColor="#000000"
+                android:textColor="#666666"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
@@ -32,14 +32,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textColor="#000000" />
+                android:textColor="#666666" />
 
             <TextView
                 android:id="@+id/tvZipcode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textColor="#000000"
+                android:textColor="#666666"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
@@ -47,7 +47,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textColor="#000000" />
+                android:textColor="#666666" />
+
+            <TextView
+                android:id="@+id/tvPhoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:clickable="true"
+                android:textColor="#87B3FA" />
 
             <TextView
                 android:id="@+id/tvReview"
@@ -55,6 +63,8 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="#000000"
+                android:paddingTop="5px"
+                android:paddingBottom="5px"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <ListView
